feat: add telegram and website field for user
