# ServerAPI/src/application/services/friend.request.service.ts
@@ -1,7 +1,11 @@
 import { singleton } from "tsyringe";
 import { AuthDetailDTO } from "../dtos/auth.dto";
-import { FriendRequestGetParam } from "../dtos/friend.request.dto";
+import {
+  FriendRequestCreateDTO,
+  FriendRequestDetailDTO,
+} from "../dtos/friend.request.dto";
 import { IDParam, PageParam } from "../dtos/request.dto";
+import NotFoundError from "../errors/notfound.error";
 import { IFriendRepository } from "../interfaces/persistence/friend.repository";
 import { IFriendRequestRepository } from "../interfaces/persistence/friend.request.repository";
 
@@ -21,39 +25,40 @@ export class FriendRequestService {
     currUser: AuthDetailDTO,
     payload: null,
     params: PageParam
-  ): Promise<any> {
+  ): Promise<FriendRequestDetailDTO> {
     //TODO: Implement Filtering Response Data
     const data = await this.friendRequestRepository.getByReceiverID(
       currUser.id,
       params.pageSize ?? 20,
       params.pageNumber ?? 0
     );
-    return data;
+    return data as FriendRequestDetailDTO;
   }
 
   public async getSentFriendRequests(
     currUser: AuthDetailDTO,
     payload: null,
     params: PageParam
-  ): Promise<any> {
+  ): Promise<FriendRequestDetailDTO> {
     //TODO: Implement Filtering Response Data
-    return await this.friendRequestRepository.getBySenderID(
+    return (await this.friendRequestRepository.getBySenderID(
       currUser.id,
       params.pageSize,
       params.pageNumber
-    );
+    )) as FriendRequestDetailDTO;
   }
 
   public async createFriendRequest(
     currUser: AuthDetailDTO,
-    payload: null,
-    params: IDParam
-  ): Promise<any> {
-    //TODO: Impemnt filtering
+    payload: FriendRequestCreateDTO,
+    params: null
+  ): Promise<null> {
+    //TODO: Implement filtering
     await this.friendRequestRepository.create({
       senderId: currUser.id,
-      receiverId: params.id,
+      receiverId: payload.receiverId,
     });
+    return null;
   }
 
   //TODO : add which was the sender and recieved
@@ -61,10 +66,10 @@ export class FriendRequestService {
     currUser: AuthDetailDTO,
     payload: null,
     params: IDParam
-  ): Promise<any> {
+  ): Promise<null> {
     //TODO: Transaction
     const data = await this.friendRequestRepository.getByID(params.id);
-    if (!data) throw new Error("Friend Request Not Found");
+    if (!data) throw new NotFoundError(["Friend Request Not Found"]);
     await Promise.all([
       this.friendRequestRepository.delete(data),
       this.FriendRepository.create({
@@ -76,16 +81,17 @@ export class FriendRequestService {
         friendId: data.senderId,
       }),
     ]);
-    return data;
+    return null;
   }
 
   public async rejectFriendRequest(
     currUser: AuthDetailDTO,
     payload: null,
-    params: FriendRequestGetParam
-  ): Promise<void> {
+    params: IDParam
+  ): Promise<null> {
     const data = await this.friendRequestRepository.getByID(params.id);
-    if (!data) throw new Error("Friend Request Not Found");
+    if (!data) throw new NotFoundError(["Friend Request Not Found"]);
     await this.friendRequestRepository.delete(data);
+    return null;
   }
 }
